<resources>
    <string name="app_name">E-Branch Driver</string>
    <string name="map_api_key">AIzaSyCbc2Y5AIwZ8uUeHRUXiozGN3CnpjKT0oI</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="you_already_have_an_account_log_in">Already have an account! login</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="bank_account">Bank account </string>
    <string name="terms_and_conditions">Terms of use</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>

    <string name="skip">skip</string>

    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Email or Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="general_settings">General Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_settings">Language Settings</string>
    <string name="no_details">No details</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="ok">OK</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="done">Done</string>

    <string name="next">Next</string>

    <string name="name">Name</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="location">Location</string>
    <string name="share">share</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="change_language">Change language</string>
    <string name="detials">Details</string>
    <string name="register">Register</string>
    <string name="upload_image">Upload Image</string>
    <string name="ads_photos">Ads Photos</string>
    <string name="about">About</string>
    <string name="time">Time</string>
    <string name="map">map</string>
    <string name="share_in">Share in</string>

    <string name="blokced">User is blocked</string>
    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your mobile phone</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="inc_code">Incorrect code</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="since">since</string>
    <string name="no_name">No name</string>
    <string name="more_details">More details :</string>
    <string name="no_search_result">No search result</string>
    <string name="search_results">Search results</string>
    <string name="result">Results</string>
    <string name="from">From</string>
    <string name="no_categories_to_display">No categories to display</string>
    <string name="sms">Sms</string>
    <string name="sign_out">Sign out</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="wil_rev_req">Will review your request by admin</string>
    <string name="add_photo">Add photo</string>
    <string name="category">Category</string>
    <string name="city">City</string>
    <string name="ch_city">Choose city</string>
    <string name="ch">Choose</string>
    <string name="select">Select</string>
    <string name="select_picture">Select picture</string>
    <string name="approved">Approved</string>
    <string name="no_notifications_to_display">No notifications to display</string>

    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">Minute Ago</string>
    <string name="min">Minute</string>
    <string name="an_hour_ago">An Hour Ago</string>
    <string name="hs">Hour</string>
    <string name="yesterday">Yesterday</string>
    <string name="day">day</string>
    <string name="type_a_message">type a message....</string>
    <string name="img_sent">image sent</string>
    <string name="pass_short">password too short</string>
    <string name="code">Code</string>
    <string name="create_an_account">Create an account</string>
    <string name="about_me">About me</string>
    <string name="accept_terms_and_conditions">Accept terms and conditions</string>
    <string name="ch_exper">Choose experience</string>
    <string name="ch_dept">Choose department</string>
    <string name="cnt_sign_accept">You can\'t sign up without accepting terms and conditions</string>
    <string name="services">Services</string>
    <string name="caregivers">Caregivers</string>
    <string name="careseekers">CareSeekers</string>
    <string name="no_service">No service</string>
    <string name="no_orders">No orders</string>
    <string name="orders">Orders</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="picture">picture</string>
    <string name="license">License</string>
    <string name="car_form">Car form</string>
    <string name="identity">Identity</string>
    <string name="ch_img_license">Choose image license</string>
    <string name="ch_img_identity">Choose image identity</string>
    <string name="ch_img_form">Choose image form</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="available_order">Available</string>
    <string name="pending_order">Pending</string>
    <string name="delivered_order">Delivered</string>
    <string name="discarded">Discarded</string>
    <string name="stumble">Stumble</string>
    <string name="charge">Charge</string>
    <string name="rate">Rate</string>
    <string name="settings">Settings</string>
    <string name="balance">Balance :</string>
    <string name="completed_requests_this_month">Completed requests this month :</string>
    <string name="income_this_month">Income this month :</string>
    <string name="last_processes">Last charge processes</string>
    <string name="no_charge_process_found">No charge process found</string>
    <string name="charge2">Charge</string>
    <string name="enter_identity_number">Enter identity number</string>
    <string name="we_will_send_you_a_link_on_your_email_to_reset_password">We will send you a link on your email to reset password.</string>
    <string name="rate_is">Rate is :</string>
    <string name="rated_orders_this_week">Rated orders this week :</string>
    <string name="subject">Subject</string>
    <string name="week_rate">The rating is updated weekly and the current week\'s rating is displayed</string>
    <string name="inc_ph_pas">Incorrect phone or password</string>
    <string name="em_ex">Email exists</string>
    <string name="ph_ex">Phone exists</string>
    <string name="inv_phone">Invalid phone number</string>
    <string name="you">You</string>
    <string name="store">Store</string>
    <string name="client">Client</string>
    <string name="order_num">Order-Num</string>
    <string name="km">Km</string>
    <string name="sar">SAR</string>
    <string name="coupon_not_av">Coupon not available</string>
    <string name="no_rate_found">No rate found</string>
    <string name="products">Products</string>
    <string name="total">Total :</string>
    <string name="p_name">Name</string>
    <string name="p_details">Details</string>
    <string name="p_amount">Amount</string>
    <string name="p_price">Price</string>
    <string name="start_order">Start order</string>
    <string name="order_received">Received</string>
    <string name="order_not_received">Order not received</string>
    <string name="delivered">Delivered</string>
    <string name="not_delivered">Not delivered</string>
    <string name="ch_reason">Choose reason</string>
    <string name="membership_number">Membership number</string>
    <string name="bill_photo">Bill photo</string>
    <string name="order_photo">Order photo</string>
    <string name="confirm2">Confirm</string>
    <string name="ch_bill_photo">Choose bill photo</string>
    <string name="ch_order_photo">Choose order photo</string>
    <string name="market_send_order">Market Send Order to You</string>
    <string name="wrong_member">Wrong membership</string>
    <string name="comming_order">Comming order</string>
    <string name="send2">Done</string>

</resources>
