<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <item android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_user"
        />
    <item android:id="@+id/availableOrder"
        android:orderInCategory="200"
        android:title="@string/available_order"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_checklist"
        />
    <item android:id="@+id/pending"
        android:orderInCategory="300"
        android:title="@string/pending_order"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_checklist"
        />
    <item android:id="@+id/delivered"
        android:orderInCategory="400"
        android:title="@string/delivered_order"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_checklist"
        />
    <item android:id="@+id/discard"
        android:orderInCategory="500"
        android:title="@string/discarded"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_checklist"
        />
    <item android:id="@+id/stumble"
        android:orderInCategory="600"
        android:title="@string/stumble"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_checklist"
        />

    <item android:id="@+id/charge"
        android:orderInCategory="700"
        android:title="@string/charge"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_balance"
        />

    <item android:id="@+id/contact"
        android:orderInCategory="800"
        android:title="@string/contact_us"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_headset"
        />

    <item android:id="@+id/rate"
        android:orderInCategory="900"
        android:title="@string/rate"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_rate"
        />
    <item android:id="@+id/setting"
        android:orderInCategory="1000"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings"
        />

    <item android:id="@+id/logout"
        android:orderInCategory="1100"
        android:title="@string/logout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_logout"
        />
</menu>
