<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="orderType"
            type="Integer" />

        <variable
            name="status"
            type="String" />

        <variable
            name="model"
            type="com.creative.share.apps.e_branchdriver.models.OrderModel" />

        <import type="android.view.View" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="horizontal"


                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight=".3"
                            android:background="@drawable/dark_bg"
                            android:gravity="center"
                            android:text="@string/name"
                            android:textColor="@color/white"
                            android:textSize="15sp"


                            />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight=".7"
                            android:background="@color/white"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:maxLines="2"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text='@{model.user.full_name??""}'
                            android:textColor="@color/black"
                            android:textSize="13sp"

                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@color/white"
                        android:orientation="horizontal"


                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight=".3"
                            android:background="@drawable/dark_bg"
                            android:gravity="center"
                            android:text="@string/order_num"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight=".7"
                            android:background="@color/white"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:maxLines="2"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text='@{model.order_code}'
                            android:textColor="@color/black"
                            android:textSize="13sp"

                            />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llCall"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/dark_green_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:clickable="false"
                            android:longClickable="false"
                            android:padding="3dp"
                            android:src="@drawable/ic_call2"
                            android:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:clickable="false"
                            android:longClickable="false"
                            android:text="@string/call"
                            android:textColor="@color/white"
                            android:textSize="15sp"

                            />
                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/dark_bg"
                        android:gravity="center"
                        android:text="@string/products"
                        android:textColor="@color/white"
                        android:textSize="15sp"

                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:minHeight="40dp"
                        android:orientation="horizontal"
                        android:weightSum="4"

                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.3"
                            android:background="@drawable/border_black"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/p_name"
                            android:textColor="@color/black"
                            android:textSize="13sp"

                            />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.4"
                            android:background="@drawable/border_black"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/p_details"
                            android:textColor="@color/black"
                            android:textSize="13sp"

                            />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:background="@drawable/border_black"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/p_amount"
                            android:textColor="@color/black"
                            android:textSize="11sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".8"
                            android:background="@drawable/border_black"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/p_price"
                            android:textColor="@color/black"
                            android:textSize="11sp" />
                    </LinearLayout>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text='@{@string/total+" "+model.total_cost+" "+@string/sar}'
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"


                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight=".3"
                            android:background="@drawable/dark_bg"
                            android:gravity="center"
                            android:text="@string/location"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:background="@color/white"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:maxLines="2"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text='@{model.address??""}'
                            android:textColor="@color/black"
                            android:textSize="13sp"

                            />


                    </LinearLayout>

                    <fragment
                        android:id="@+id/map"
                        android:name="com.creative.share.apps.e_branchdriver.activities_fragments.activity_order_details.fragments.FragmentMapTouchListener"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"

                        />

                    <Button
                        android:id="@+id/btnPerform"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/dark_green_bg"
                        android:text="@string/start_order"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:visibility="@{orderType==1?View.VISIBLE:View.GONE,default=gone}"

                        />
                    <Button
                        android:id="@+id/btnDiscard"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/dark_green_bg"
                        android:text="@string/start_order"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:visibility='@{orderType==4?(status.equals(8)?View.VISIBLE:View.GONE):View.GONE,default=gone}'

                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:visibility='@{status.equals("5")?View.VISIBLE:View.GONE,default=gone}'
                        android:weightSum="2">

                        <Button
                            android:id="@+id/btnMarketSuccess"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:text="@string/order_received"
                            android:textColor="@color/white"
                            android:textSize="14sp"

                            />

                        <Button
                            android:id="@+id/btnMarketProblem"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:background="@color/red"
                            android:text="@string/order_not_received"
                            android:textColor="@color/white"
                            android:textSize="14sp"


                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:visibility='@{status.equals("10")?View.VISIBLE:View.GONE,default=gone}'
                        android:weightSum="2">

                        <Button
                            android:id="@+id/btnClientSuccess"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:text="@string/delivered"
                            android:textColor="@color/white"
                            android:textSize="14sp"

                            />

                        <Button
                            android:id="@+id/btnClientProblem"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:background="@color/red"
                            android:text="@string/not_delivered"
                            android:textColor="@color/white"
                            android:textSize="14sp"


                            />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


    </FrameLayout>
</layout>
